# cycms

./: .gitignore  Cargo.toml  README.md  cycms.toml
crates/cycms-admin-shell/: Cargo.toml
crates/cycms-admin-shell/src/: lib.rs
crates/cycms-api/: Cargo.toml
crates/cycms-api/src/: admin_extensions_observability.rs  common.rs  lib.rs  query.rs  state.rs
crates/cycms-api/src/handlers/: admin_editor_registry.rs  admin_extensions.rs  auth.rs  content.rs  content_types.rs  media.rs  mod.rs  plugins.rs  public.rs  roles.rs  settings.rs  users.rs
crates/cycms-api/tests/: gateway.rs
crates/cycms-auth/: Cargo.toml
crates/cycms-auth/src/: claims.rs  error.rs  lib.rs  middleware.rs  password.rs  revoked.rs  seed.rs  service.rs  token.rs  user.rs
crates/cycms-auth/tests/: login_flow.rs  middleware_axum.rs  refresh_flow.rs  setup_admin_flow.rs  user_crud_sqlite.rs
crates/cycms-cli/: Cargo.toml
crates/cycms-cli/src/: cli.rs  lib.rs  main.rs  support.rs  templates.rs
crates/cycms-cli/src/commands/: inspect.rs  migrate.rs  mod.rs  new.rs  plugin.rs  seed.rs  serve.rs
crates/cycms-cli/tests/: integration.rs
crates/cycms-content-engine/: Cargo.toml
crates/cycms-content-engine/src/: error.rs  lib.rs  model.rs  populate.rs  query.rs  repository.rs  service.rs
crates/cycms-content-engine/tests/: content_crud_sqlite.rs  delete_sqlite.rs  populate_sqlite.rs  query_sqlite.rs  repository_sqlite.rs
crates/cycms-content-model/: Cargo.toml
crates/cycms-content-model/src/: error.rs  field_type.rs  lib.rs  model.rs  repository.rs  schema.rs  seed.rs  service.rs  validation.rs
crates/cycms-content-model/tests/: repository_sqlite.rs  seed_default_types.rs  service_crud_sqlite.rs
crates/cycms-core/: Cargo.toml
crates/cycms-core/src/: lib.rs
crates/cycms-db/: Cargo.toml
crates/cycms-db/src/: error.rs  json.rs  lib.rs  pool.rs
crates/cycms-db/tests/: json_dialect.rs  pool.rs
crates/cycms-events/: Cargo.toml
crates/cycms-events/src/: bus.rs  error.rs  event.rs  handler.rs  lib.rs
crates/cycms-events/tests/: custom_event.rs  handler_isolation.rs  kind_routing.rs  multi_handler.rs  pub_sub.rs  unsubscribe.rs
crates/cycms-kernel/: Cargo.toml
crates/cycms-kernel/src/: lib.rs  request_lifecycle.rs
crates/cycms-kernel/tests/: bootstrap.rs
crates/cycms-media/: Cargo.toml
crates/cycms-media/src/: error.rs  lib.rs  model.rs  repository.rs  service.rs  storage.rs
crates/cycms-media/tests/: media_sqlite.rs
crates/cycms-migrate/: Cargo.toml
crates/cycms-migrate/migrations/system/mysql/: 20260101000001_core_users_roles_permissions.down.sql  20260101000001_core_users_roles_permissions.up.sql  20260101000002_core_content_model.down.sql  20260101000002_core_content_model.up.sql  20260101000003_core_content_entries.down.sql  20260101000003_core_content_entries.up.sql  20260101000004_core_media_settings.down.sql  20260101000004_core_media_settings.up.sql  20260101000005_core_plugins_audit.down.sql  20260101000005_core_plugins_audit.up.sql
crates/cycms-migrate/migrations/system/postgres/: 20260101000001_core_users_roles_permissions.up.sql  20260101000002_core_content_model.up.sql  20260101000003_core_content_entries.down.sql  20260101000003_core_content_entries.up.sql  20260101000004_core_media_settings.up.sql  20260101000005_core_plugins_audit.down.sql  20260101000005_core_plugins_audit.up.sql
crates/cycms-migrate/migrations/system/sqlite/: 20260101000001_core_users_roles_permissions.down.sql  20260101000001_core_users_roles_permissions.up.sql  20260101000002_core_content_model.up.sql  20260101000003_core_content_entries.down.sql  20260101000003_core_content_entries.up.sql  20260101000004_core_media_settings.down.sql  (+2 more)
crates/cycms-migrate/src/: checksum.rs  discovery.rs  engine.rs  lib.rs  record.rs  runner.rs
crates/cycms-migrate/tests/: core_migrations_sqlite.rs  discovery.rs  meta_table.rs  plugin_and_rollback.rs  system_migrations.rs
crates/cycms-observability/: Cargo.toml
crates/cycms-observability/src/: audit_logger.rs  lib.rs  request_middleware.rs  tracing_init.rs
crates/cycms-openapi/: Cargo.toml
crates/cycms-openapi/src/: lib.rs
crates/cycms-permission/: Cargo.toml
crates/cycms-permission/src/: error.rs  lib.rs  middleware.rs  model.rs  parser.rs  permission.rs  role.rs  seed.rs  service.rs
crates/cycms-permission/tests/: check_flow.rs  middleware_axum.rs  permission_crud_sqlite.rs  permission_parser.rs  plugin_register.rs  role_crud_sqlite.rs  seed_flow.rs
crates/cycms-plugin-api/: Cargo.toml
crates/cycms-plugin-api/src/: context.rs  error.rs  lib.rs  native.rs  plugin.rs  registry.rs
crates/cycms-plugin-manager/: Cargo.toml
crates/cycms-plugin-manager/src/: compiler.rs  discovery.rs  error.rs  frontend_manifest.rs  frontend_snapshot.rs  host_registry.rs  lib.rs  manifest.rs  model.rs  repository.rs  resolver.rs  runtime.rs  service.rs
crates/cycms-plugin-manager/tests/: lifecycle.rs  plugin_repository_sqlite.rs
crates/cycms-plugin-native/: Cargo.toml
crates/cycms-plugin-native/src/: lib.rs  runtime.rs
crates/cycms-plugin-native/tests/: native_runtime.rs
crates/cycms-plugin-wasm/: Cargo.toml
crates/cycms-plugin-wasm/src/: bindings.rs  host.rs  host_impls.rs  lib.rs  runtime.rs
crates/cycms-plugin-wasm/src/host_impls/: auth.rs  content.rs  db.rs  event.rs  http.rs  kv.rs  log.rs  permission.rs  route.rs  settings.rs
crates/cycms-plugin-wasm/tests/: wasm_runtime.rs
crates/cycms-plugin-wasm/tests/fixtures/: hello_plugin.wasm
crates/cycms-plugin-wasm/wit/: plugin.wit
crates/cycms-publish/: Cargo.toml
crates/cycms-publish/src/: error.rs  lib.rs  repository.rs  service.rs
crates/cycms-publish/tests/: publish_sqlite.rs
crates/cycms-render/: Cargo.toml
crates/cycms-render/src/: assets.rs  content_ir.rs  html_renderer.rs  lib.rs  page_ir.rs  parsers.rs
crates/cycms-render/src/parsers/: blocks.rs  html.rs  markdown.rs  tiptap.rs
crates/cycms-revision/: Cargo.toml
crates/cycms-revision/src/: error.rs  lib.rs  model.rs  repository.rs  service.rs
crates/cycms-revision/tests/: revision_sqlite.rs
(+177 files in other folders)
