[workspace]
resolver = "3"
members = [
    "crates/cycms-core",
    "crates/cycms-kernel",
    "crates/cycms-config",
    "crates/cycms-db",
    "crates/cycms-migrate",
    "crates/cycms-auth",
    "crates/cycms-permission",
    "crates/cycms-content-model",
    "crates/cycms-content-engine",
    "crates/cycms-revision",
    "crates/cycms-publish",
    "crates/cycms-media",
    "crates/cycms-api",
    "crates/cycms-openapi",
    "crates/cycms-events",
    "crates/cycms-settings",
    "crates/cycms-observability",
    "crates/cycms-plugin-api",
    "crates/cycms-plugin-manager",
    "crates/cycms-plugin-native",
    "crates/cycms-plugin-wasm",
    "crates/cycms-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/chulingera2025/cycms"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# 允许在公共 API 中使用 must_use，但不强制
must_use_candidate = "allow"
# 模块名称重导出在 Rust 2024 下是惯用写法
module_name_repetitions = "allow"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "uuid", "chrono", "json"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc"] }
jsonwebtoken = "9"
rand = "0.8"
async-trait = "0.1"
infer = "0.19"
tempfile = "3"

cycms-core = { path = "crates/cycms-core" }
cycms-kernel = { path = "crates/cycms-kernel" }
cycms-config = { path = "crates/cycms-config" }
cycms-db = { path = "crates/cycms-db" }
cycms-migrate = { path = "crates/cycms-migrate" }
cycms-auth = { path = "crates/cycms-auth" }
cycms-permission = { path = "crates/cycms-permission" }
cycms-content-model = { path = "crates/cycms-content-model" }
cycms-content-engine = { path = "crates/cycms-content-engine" }
cycms-revision = { path = "crates/cycms-revision" }
cycms-publish = { path = "crates/cycms-publish" }
cycms-media = { path = "crates/cycms-media" }
cycms-api = { path = "crates/cycms-api" }
cycms-openapi = { path = "crates/cycms-openapi" }
cycms-events = { path = "crates/cycms-events" }
cycms-settings = { path = "crates/cycms-settings" }
cycms-observability = { path = "crates/cycms-observability" }
cycms-plugin-api = { path = "crates/cycms-plugin-api" }
cycms-plugin-manager = { path = "crates/cycms-plugin-manager" }
cycms-plugin-native = { path = "crates/cycms-plugin-native" }
cycms-plugin-wasm = { path = "crates/cycms-plugin-wasm" }
