[package]
name = "cycms-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
cycms-core = { workspace = true }
cycms-config = { workspace = true }
cycms-auth = { workspace = true }
cycms-events = { workspace = true }
cycms-permission = { workspace = true }
cycms-content-model = { workspace = true }
cycms-content-engine = { workspace = true }
cycms-revision = { workspace = true }
cycms-publish = { workspace = true }
cycms-media = { workspace = true }
cycms-plugin-api = { workspace = true }
cycms-plugin-manager = { workspace = true }
cycms-plugin-native = { workspace = true }
cycms-plugin-wasm = { workspace = true }
cycms-settings = { workspace = true }
cycms-openapi = { workspace = true }
cycms-observability = { workspace = true }
cycms-host-types = { workspace = true }

[dev-dependencies]
cycms-db = { workspace = true }
cycms-migrate = { workspace = true }
cycms-kernel = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
tempfile = { workspace = true }

[lints]
workspace = true
