[package]
name = "cycms-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
cycms-core = { workspace = true }
cycms-config = { workspace = true }
cycms-db = { workspace = true }
cycms-host-types = { workspace = true }
cycms-kernel = { workspace = true }
cycms-migrate = { workspace = true }
cycms-auth = { workspace = true }
cycms-permission = { workspace = true }
cycms-content-model = { workspace = true }
cycms-plugin-manager = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sqlx = { workspace = true }
cycms-plugin-wasm = { workspace = true }

[lints]
workspace = true
