[package]
name = "cycms-content-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-db = { workspace = true }
cycms-config = { workspace = true }
cycms-content-model = { workspace = true }
cycms-events = { workspace = true }
cycms-revision = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
cycms-auth = { workspace = true }
cycms-migrate = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints]
workspace = true
