[package]
name = "cycms-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-config = { workspace = true }
cycms-db = { workspace = true }
cycms-migrate = { workspace = true }
cycms-auth = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true }
tempfile = "3"

[lints]
workspace = true
