[package]
name = "cycms-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-config = { workspace = true }
cycms-db = { workspace = true }
cycms-migrate = { workspace = true }
cycms-auth = { workspace = true }
cycms-permission = { workspace = true }
cycms-events = { workspace = true }
cycms-settings = { workspace = true }
cycms-content-model = { workspace = true }
cycms-content-engine = { workspace = true }
cycms-revision = { workspace = true }
cycms-plugin-api = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true }
serde_json = { workspace = true }
cycms-revision = { workspace = true }
tempfile = "3"

[lints]
workspace = true
