[package]
name = "cycms-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-config = { workspace = true }
cycms-admin-shell = { workspace = true }
cycms-host-types = { workspace = true }
cycms-db = { workspace = true }
cycms-migrate = { workspace = true }
cycms-auth = { workspace = true }
cycms-permission = { workspace = true }
cycms-events = { workspace = true }
cycms-settings = { workspace = true }
cycms-content-model = { workspace = true }
cycms-content-engine = { workspace = true }
cycms-revision = { workspace = true }
cycms-publish = { workspace = true }
cycms-media = { workspace = true }
cycms-api = { workspace = true }
cycms-openapi = { workspace = true }
cycms-observability = { workspace = true }
cycms-plugin-api = { workspace = true }
cycms-plugin-manager = { workspace = true }
cycms-plugin-native = { workspace = true }
cycms-plugin-wasm = { workspace = true }
cycms-render = { workspace = true }
semver = "1"
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true }
cycms-revision = { workspace = true }
cycms-publish = { workspace = true }
cycms-media = { workspace = true }
tempfile = "3"

[lints]
workspace = true
