[package]
name = "cycms-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-config = { workspace = true }
cycms-core = { workspace = true }
cycms-db = { workspace = true }
cycms-events = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cycms-migrate = { workspace = true }
http-body-util = "0.1"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }

[lints]
workspace = true
