[package]
name = "cycms-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-db = { workspace = true }
cycms-auth = { workspace = true }
cycms-content-model = { workspace = true }
cycms-content-engine = { workspace = true }
cycms-revision = { workspace = true }
cycms-publish = { workspace = true }
cycms-events = { workspace = true }
cycms-permission = { workspace = true }
cycms-settings = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
