[package]
name = "cycms-plugin-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-db = { workspace = true }
cycms-permission = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
semver = "1"
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cycms-config = { workspace = true }
cycms-migrate = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }

[lints]
workspace = true
