[package]
name = "cycms-plugin-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cycms-core = { workspace = true }
cycms-events = { workspace = true }
cycms-plugin-api = { workspace = true }
cycms-plugin-manager = { workspace = true }
cycms-native-loader = { path = "../../support/cycms-native-loader" }
async-trait = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cycms-auth = { workspace = true }
cycms-config = { workspace = true }
cycms-content-engine = { workspace = true }
cycms-content-model = { workspace = true }
serde_json = { workspace = true }
cycms-db = { workspace = true }
cycms-media = { workspace = true }
cycms-migrate = { workspace = true }
cycms-permission = { workspace = true }
cycms-publish = { workspace = true }
cycms-revision = { workspace = true }
cycms-settings = { workspace = true }
semver = "1"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
