[package]
name = "cycms-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ammonia = "4"
cycms-core = { workspace = true }
cycms-host-types = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true