[workspace]

[package]
name = "hello-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "cycms:hello-plugin"

[package.metadata.component.target]
world = "plugin"
path = "wit"
